opam-version: "2.0"
maintainer: "Etienne Millon <me@emillon.org>"
authors: [
    "Etienne Millon <me@emillon.org>"
    "INRIA and Microsoft Corporation"
]
license: "MIT"
homepage: "https://github.com/mirage/ocaml-hacl-ecc"
bug-reports: "https://github.com/mirage/ocaml-hacl-ecc/issues"
dev-repo: "git+https://github.com/mirage/ocaml-hacl-ecc.git"
doc: "https://mirage.github.io/ocaml-hacl-ecc/doc"
build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.4.0"}
  "cstruct" {>= "3.5.0"}
  "ppx_deriving_yojson" {with-test}
  "yojson" {with-test}
  "hex" {with-test}
  "ppx_blob" {with-test}
]
synopsis: "Primitives for Elliptic Curve Cryptography taken from Project Everest"
description: """
This is an implementation of the X25519 key exchange algorithm, using code from
Project Everest.

Cryptographic primitives should not be used in end applications, they are better
used as part of a cryptographic library.
"""
