(copy_files# ../src/hacl_x25519_stubs.c)

(copy_files# ../src/Hacl_Curve25519.c)

(copy_files# ../src/Hacl_Curve25519.h)

(copy_files# ../src/FStar.h)

(copy_files# ../src/kremlib_base.h)

(copy_files# ../src/kremlib.h)

(library
 (name hacl_x25519_freestanding)
 (public_name hacl_x25519.freestanding)
 (optional)
 (libraries ocaml-freestanding)
 (foreign_stubs
  (language c)
  (flags (:include cflags-freestanding.sexp))
  (names hacl_x25519_stubs Hacl_Curve25519)))

(rule
 (with-stdout-to
  cflags-freestanding.sexp
  (run ./cflags.sh)))
