(library
 (name            hacl)
 (public_name     hacl)
 (libraries       bigstring)
 (c_names         hacl_stubs
                  Hacl_Curve25519)
 (c_flags         (:include c_flags.sexp))
 )

; sets flags for 32/64 bits architectures
(rule
 (targets c_flags.sexp)
 (action  (run %{exe:config/discover.exe} -ocamlc %{ocamlc})))
