(library
 (public_name hacl_x25519)
 (modules hacl_x25519)
 (libraries cstruct eqaf)
 (foreign_archives hacl_x25519_mirage))

(rule
 (targets libhacl_x25519_mirage.a)
 (deps symbols.txt libhacl_x25519_unsafe_stubs.a)
 (action
  (run objcopy --redefine-syms %{deps} %{targets})))

(rule
 (targets dllhacl_x25519_mirage.so)
 (deps symbols.txt dllhacl_x25519_unsafe_stubs.so)
 (action
  (run objcopy --redefine-syms %{deps} %{targets})))

(rule
 (targets symbols.txt)
 (deps
  symbols.ml
  (:o Hacl_Curve25519.o))
 (action
  (run ./symbols.ml %{o} %{targets})))

(library
 (name hacl_x25519_unsafe)
 (modules none)
 (foreign_stubs
  (language c)
  (names hacl_x25519_stubs Hacl_Curve25519)))
